--- a/index.ipynb
+++ b/index.ipynb
@@ -122,11 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_latitude = coordinates"
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = coordinat"
    ]
   },
   {
