Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = coordinat"
+    "ba_longitude = coordinates"
    ]
   },
   {
